Finished as per project requirement. Might comeback to fix the h1 overflow bug :D

--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	background-color: #d3d3d3;
+	/* overflow-y used to hide bug when resizing grid*/
+	overflow-y: hidden;
+	
 }
 ol, ul {
 	list-style: none;
@@ -50,4 +53,19 @@ table {
 }
 .grid {
 	border: 1px solid black;
+}
+h1 {
+	display: grid;
+	justify-content: center;
+	font-size: 50px;
+	background: -webkit-linear-gradient(violet, indigo, blue);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	
+	  
+}
+#button {
+	display: grid;
+	justify-content: center;
+	padding-bottom: 10px;
 }
